@@ -53,6 +53,7 @@ COCKPIT
 - Added support for buckets located in the Asia Pacific
   (Singapore) location.
 - Added support for HTTPS creating HTTPS-only CloudFront distributions.
+- Removed overly fussy string-length checks in credentials dialog.
 
 KUDOS TO:
 
